# stockfish_mcp

./: .gitignore  CLAUDE.local.md  CLAUDE.md  LICENSE  README.md  game_state.py  pyproject.toml  pytest.ini  server.py  stockfish_manager.py
.claude/: settings.local.json
docs/: chess-game-feature-plan.md  pydantic-refactoring-plan.md  stockfish-manager-design.md  testing-strategy.md
stockfish_mcp/: __init__.py  fen_validator.py  logger.py  logging_config.py
tests/: conftest.py  test_fen_validator.py  test_tools.py
tests/mocks/: __init__.py  mock_stockfish.py
