[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockfish-mcp"
version = "0.1.0"
description = "MCP server for Stockfish chess engine"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-chess>=1.999",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.12.3",
]

[project.scripts]
stockfish-mcp = "stockfish_mcp.server:main"
