[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockfish-mcp"
version = "0.1.0"
description = "MCP server for Stockfish chess engine"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-chess>=1.999",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.12.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
stockfish-mcp = "server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10.0",
    "anyio>=3.0"
]
